deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-backend
  labels:
    app: chess-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chess-backend
  template:
    metadata:
      labels:
        app: chess-backend
    spec:
      containers:
      - name: chess-backend-container
        image: deanmacdonald/chess-app:latest
        ports:
        - containerPort: 5000
